<resources>
    <string name="app_name">ZyFoo AI</string>
    <string name="google_web_client_id" translatable="false">343532360294-norci7k052k41qv1v5qf6l7ev47lvt17.apps.googleusercontent.com</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="error_message__no_internet">No internet connection.</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/yy</string>
    <string name="card_holders_name">Name</string>
    <string name="cvv">CVV</string>
    <string name="proceed">Proceed with Card</string>
    <string name="example_name">Test Name</string>
    <string name="example_email">android-sdk-sample-app@instamojo.com</string>
    <string name="example_phone">9876543210</string>
    <string name="example_amount">10</string>
    <string name="test_description">Test description</string>
    <string name="pay">Pay</string>
    <string name="loader_message">Please wait&#8230;</string>
    <string name="login_login">Login</string>
    <string name="please_login">Please Login</string>
    <string name="login_loading">Loading...</string>
    <string name="login_email">Email</string>
    <string name="login_name">Name</string>
    <string name="login_phone_number">Phone Number</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_designation">Enter Your Designation</string>
    <string name="hint_address">Enter Your Address</string>
    <string name="login__fail">SignIn Failed</string>
    <string name="login__fail_account">Cannot SignIn your account</string>
    <string name="login__auth_email">This email is logged in with email and password. Please try to login with email and password.</string>
    <string name="login__auth_google">This email is logged in with Google. Please try to login with Google.</string>
    <string name="app__cancel">Cancel</string>
    <string name="success">SUCCESS</string>
    <string name="error">ERROR</string>
    <string name="login_first_login">Please Login Your \n Account</string>
    <string name="menu_category">Categories</string>
    <string name="menu_custom">Custom</string>
    <string name="my_business">My Business</string>
    <string name="menu_business">Profile</string>
    <string name="my_creation">My Creation</string>
    <string name="Animated_video">Animated Video</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_profile2"> </string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_rate">Rate us on Google play</string>
    <string name="menu_share">Share App</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_exit">Exit</string>
    <string name="latest_festivals">Latest Festivals</string>
    <string name="upcoming_festivals">Upcoming  Festivals</string>
    <string name="trending">Trending</string>
    <string name="business_category">Business Category</string>
    <string name="view_all">View All</string>
    <string name="custom_categories">Custom Categories</string>
    <string name="select_languages">Select Languages</string>
    <string name="save">Save</string>
    <string name="message__cancel_close">Cancel</string>
    <string name="message__want_to_logout">Do you really want to logout?</string>
    <string name="message__logout">Logout</string>
    <string name="message_contact">Successfully Send Contact \n Shortly We will contact you.</string>
    <string name="fail_message_contact">Response is Fail! \n Try again</string>
    <string name="force_update_true">Update is available</string>
    <string name="force_update__button_update"> Update </string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="festival_image_create">will Be shown a day before the festival </string>
    <string name="no_festival_image">Festival Images</string>
    <string name="edit">Save</string>
    <string name="delete">Delete</string>
    <string name="add_business">+Add</string>
    <string name="business_name">Business Name</string>
    <string name="business_detail">Business Details</string>
    <string name="business_email">Business Email</string>
    <string name="business_phone_number">Business Phone Number</string>
    <string name="business_website">Business Website</string>
    <string name="business_address">Business Address</string>
    <string name="hint_business_name">Enter Business Name</string>
    <string name="hint_business_email">Enter Business Email</string>
    <string name="hint_business_number">Enter Business Number</string>
    <string name="hint_business_website">Enter Business Website</string>
    <string name="hint_business_address">Enter Business Address</string>
    <string name="add_business_titles">Add Business</string>
    <string name="edit_business_titles">Edit Business</string>
    <string name="invalid_email">Enter Valid Email</string>
    <string name="please_add_business_titles">Please Add Your Business \n for Create Post</string>
    <string name="your_business_limit">Your Business Limit is Full \n Upgrade Your Plan</string>
    <string name="your_plan_expired">Your Plan is Expired</string>
    <string name="name">Name</string>
    <string name="logo">Logo</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="add_text">Add Text</string>
    <string name="add_image">Add Image</string>
    <string name="text_color">Text Color</string>
    <string name="font">Font</string>
    <string name="text_size">Text Size</string>
    <string name="create">Create</string>
    <string name="frame">Frames</string>
    <string name="edit_text">Edit Text</string>
    <string name="select">Select</string>
    <string name="select_image">Select Image</string>
    <string name="select_image_msg">Select an Image from Gallery or from Camera to Make Post</string>
    <string name="camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="err_save_image">Error while saving image</string>
    <string name="don_t_create">Can\'t create directory to save image</string>
    <string name="image_saved">Image Save Successfully</string>
    <string name="video_saved">Video Save Successfully</string>
    <string name="share_via">Share Via</string>
    <string name="sure_delete">Are you sure you want to delete?</string>
    <string name="image_deleted">Image Deleted</string>
    <string name="video_deleted">Video Deleted</string>
    <string name="error_delete">Error Deleting Image</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="share_txt">Hey guys. I am using ZyFoo AI App.Download Now \n\nhttps://play.google.com/store/apps/details?id=</string>
    <string name="share_card">Hello! Here\'s my Digital Business Card. You can click on the link to open it. \n </string>
    <string name="subscribe">Subscribe</string>
    <string name="premium">Premium Post</string>
    <string name="please_subscribe">This is a Premium Post \n Please subscribe</string>
    <string name="please_subscribe_videp">This is a Premium Video \n Please subscribe</string>
    <string name="please_subscribe_frame">This is a Premium Frame \n Please subscribe</string>
    <string name="payments">Payments</string>
    <string name="card_upi_net_banking">Pay with Cards / UPI / Net Banking</string>
    <string name="plan_selected">Plan Selected</string>
    <string name="have_a_promo_code">Have a Promo Code?</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="apply">Apply</string>
    <string name="total_payable">Total Payable</string>
    <string name="applied_code">Applied Code</string>
    <string name="discount_on">Discount On</string>
    <string name="account_details">Account Details</string>
    <string name="card_paytm">Pay with Paytm</string>
    <string name="card_upi">Pay with Cards / UPI</string>
    <string name="card_stripe">Pay with Cards (International)</string>
    <string name="bank_transfer">Offline Payment</string>
    <string name="loading_payment_info">Payment Info..</string>
    <string name="tansaction_succeed">Your Transaction was Successfully \n Complete. Enjoy Premium Access!</string>
    <string name="notification">Notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="refund_policy">Refund &amp; Cancellation Policy</string>
    <string name="terms_and_service">Terms &amp; Service</string>
    <string name="version">Version</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="pryvacy_settings">Privacy Settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="please_enter_valid_mobile">Please Enter Valid Mobile</string>
    <string name="massage">Massage</string>
    <string name="enter_details">Enter Details</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="upgrade">Upgrade</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login_continue_withd">Enter your mobile number to login \ncreate your account.</string>
    <string name="no_videos_found">No Videos Found</string>
    <string name="business_categories">Business Categories</string>
    <string name="logout">Logout</string>
    <string name="add_business_details">Add Business Details</string>
    <string name="discard_text">Do you want to discard the changes ?</string>
    <string name="something_wrong">Something Wrong</string>
    <string-array name="theme_array">
        <item>@string/system_default</item>
        <item>@string/dark</item>
        <item>@string/light</item>
    </string-array>
    <string name="currency">₹</string>
    <string name="alert">Unsaved work.</string>
    <string name="auto">Auto</string>
    <string name="create_dir_err">Cant create directory to save image.</string>
    <string name="cut_inside">Cut Inside</string>
    <string name="cut_outside">Cut Outside</string>
    <string name="cut_photo">Select Photo</string>
    <string name="drag_bw">Drag POINTER to restore image.</string>
    <string name="drag_color">Drag POINTER to earse.</string>
    <string name="erase">Manual</string>
    <string name="exit_cut_page">Do you want to exit without saving?</string>
    <string name="import_error">Error while getting image.</string>
    <string name="import_img_warning">Please import image!!!</string>
    <string name="add_story_title">Add Story</string>
    <string name="add_story_post">Post</string>
    <string name="add_story_pick">Select photos</string>
    <string name="add_story_hint">Select up to 10 photos. Your story is visible to all logged-in users for 24 hours.</string>
    <string name="str_41">Add Text</string>
    <string name="str_42">DONE</string>
    <string name="str_43">Double tap to edit !</string>
    <string name="support_chat_title">Support Chat</string>
    <string name="support_chat_hint">Type your message…</string>
    <string name="send">Send</string>
    <string name="frame_size">Frame size</string>
    <string name="frame_opacity">Frame opacity</string>
    <string name="media_fit_in_frame">Fit in frame</string>
    <string name="customize_frame_title">Customize frame</string>
    <string name="customize_frame_subtitle">Adjust strip, frame size, opacity &amp; media fit</string>
    <string name="update_strip_photo">Update strip photo</string>
</resources>