<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingHorizontal="@dimen/_12sdp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/add_story_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/btnPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_user_story_post_btn"
            android:fontFamily="@font/inter_semi_bold"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_6sdp"
            android:text="@string/add_story_post"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/hintTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_14sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/add_story_hint"
        android:textColor="@color/post_meta_text_secondary"
        android:textSize="@dimen/_11sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/previewRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:padding="@dimen/_8sdp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_12sdp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/btnPick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/bg_user_story_pick_btn"
        android:fontFamily="@font/inter_semi_bold"
        android:gravity="center"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/add_story_pick"
        android:textColor="#0B5C4A"
        android:textSize="@dimen/_13sdp" />
</LinearLayout>
