<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/backImg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/_11sdp"
            android:src="@drawable/back_img" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/support_chat_title"
            android:textColor="@color/header_text_color"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/_8sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/_8sdp">

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/cardBackgroundColor"
            android:hint="@string/support_chat_hint"
            android:padding="@dimen/_10sdp" />

        <TextView
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@drawable/action_btn_bg_1"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/send"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
