<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_16sdp"
    android:paddingTop="@dimen/_12sdp"
    android:paddingBottom="@dimen/_20sdp">

    <View
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/full_rounded_bg"
        android:backgroundTint="#DDDDDD" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/inter_semi_bold"
        android:gravity="center"
        android:text="@string/customize_frame_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/customize_frame_subtitle"
        android:textColor="@color/post_meta_text"
        android:textSize="@dimen/_9sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/footerSizeLabel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="Strip size"
            android:textColor="@color/post_meta_text"
            android:textSize="@dimen/_10sdp" />

        <SeekBar
            android:id="@+id/footerSizeSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:progress="50" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frameSizeLabel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/frame_size"
            android:textColor="@color/post_meta_text"
            android:textSize="@dimen/_10sdp" />

        <SeekBar
            android:id="@+id/frameSizeSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:progress="50" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frameAlphaLabel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/frame_opacity"
            android:textColor="@color/post_meta_text"
            android:textSize="@dimen/_10sdp" />

        <SeekBar
            android:id="@+id/frameAlphaSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:progress="100" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mediaFitLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_regular"
            android:text="@string/media_fit_in_frame"
            android:textColor="@color/post_meta_text"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/mediaFitSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/updateStripPhotoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@drawable/bg_ripple_round"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_8sdp">

        <ImageView
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/ic_add_images"
            app:tint="@color/g3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/update_strip_photo"
            android:textColor="@color/g3"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

</LinearLayout>
